--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
     <script src="connection-monitor.js"></script>
     <script src="data-cache.js"></script>
     
+    <!-- Responsive UI Framework - إطار واجهة متجاوبة -->
+    <link rel="stylesheet" href="responsive-ui.css">
+    
     <!-- HTML Meta Tags -->
     <meta name="description" content="Ambulance Reg System - Ambulance Activity Log | نظام سجل الإسعاف - سجل رحلات الإسعاف | Ministry of Health - Hasik Health Center | وزارة الصحة - مركز حاسك الصحي">
     <meta name="theme-color" content="#1e40af">
