--- a/login.html
+++ b/login.html
@@ -42,9 +42,12 @@
     <meta name="twitter:title" content="Ambulance Reg System | نظام سجل الإسعاف - Ministry of Health">
     <meta name="twitter:description" content="Ministry of Health - Hasik Health Center | Ambulance Activity Log System | وزارة الصحة - مركز حاسك الصحي | نظام سجل رحلات الإسعاف">
     <meta name="twitter:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
-    <link rel="manifest" href="manifest-ar.json" id="app-manifest">
-    <link rel="icon" type="image/png" href="moh-logo.png">
-    <link rel="apple-touch-icon" href="moh-logo.png">
+    <link rel="manifest" href="manifest-ar.json?v=2" id="app-manifest">
+    <link rel="icon" type="image/png" href="moh-photo_Page_1.png">
+    <link rel="apple-touch-icon" href="moh-photo_Page_1.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="moh-photo_Page_1.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="moh-photo_Page_1.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="moh-photo_Page_1.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;500;600;700&family=Cairo:wght@400;600;700&family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -291,7 +294,7 @@
         }
 
         .install-btn {
-            display: none;
+            display: inline-flex;
             width: auto;
             padding: 10px 20px;
             background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
@@ -313,10 +316,6 @@
         .install-btn:hover {
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(99, 102, 241, 0.4);
-        }
-
-        .install-btn.show {
-            display: inline-flex;
         }
 
         .install-btn .device-icon {
@@ -596,7 +595,8 @@
             // Update manifest based on language
             const manifestLink = document.getElementById('app-manifest');
             if (manifestLink) {
-                manifestLink.href = lang === 'ar' ? 'manifest-ar.json' : 'manifest-en.json';
+                const timestamp = new Date().getTime();
+                manifestLink.href = lang === 'ar' ? `manifest-ar.json?v=${timestamp}` : `manifest-en.json?v=${timestamp}`;
             }
             
             // Update language buttons
