--- a/admin-interface.html
+++ b/admin-interface.html
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_OM">
     <meta property="og:site_name" content="نظام سجل الإسعاف">
-    <link rel="icon" type="image/png" href="moh-logo.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="icon-48x48.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;500;600&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
