--- a/driver-interface.html
+++ b/driver-interface.html
@@ -31,7 +31,8 @@
     <meta property="og:site_name" content="نظام سجل الإسعاف">
     
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="moh-logo.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="icon-48x48.png">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
     <title>تسجيل رحلة الإسعاف - السائق</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
