--- a/nurse-interface.html
+++ b/nurse-interface.html
@@ -20,7 +20,7 @@
     <meta name="description" content="Ambulance Trip Registration and Documentation System - Hasik Health Center">
     <meta property="og:title" content="Ambulance Trip Registration - Hasik Health Center">
     <meta property="og:description" content="Ambulance Trip Registration and Documentation System - Hasik Health Center">
-    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
+    <meta property="og:image" content="https://officerhasikhc.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Hasik Health Center">
