--- a/settings-interface.html
+++ b/settings-interface.html
@@ -10,11 +10,11 @@
     <meta name="description" content="إعدادات نظام تسجيل رحلات الإسعاف - المديرية العامة للخدمات الصحية بمحافظة ظفار - مركز حاسك الصحي">
     <meta property="og:title" content="إعدادات النظام - نظام سجل الإسعاف">
     <meta property="og:description" content="إعدادات نظام تسجيل رحلات الإسعاف - المديرية العامة للخدمات الصحية بمحافظة ظفار - مركز حاسك الصحي">
-    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
+    <meta property="og:image" content="https://officerhasikhc.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_OM">
     <meta property="og:site_name" content="نظام سجل الإسعاف">
-    <link rel="icon" type="image/png" href="moh-logo.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="icon-48x48.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;500;600&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
